<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:title="@string/settings_title">

    <ListPreference
            android:defaultValue="@string/settings_order_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_order_by_key"
            android:title="@string/settings_order_by_label"
            tools:summary="@string/settings_order_by_default" />

    <EditTextPreference
            android:defaultValue="@string/settings_min_magnitude_default"
            android:digits="0123456789."
            android:key="@string/settings_min_magnitude_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_min_magnitude_label"
            tools:summary="@string/settings_min_magnitude_default" />

    <EditTextPreference
            android:defaultValue="@string/settings_limit_default"
            android:digits="0123456789"
            android:key="@string/settings_limit_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_limit_label"
            tools:summary="@string/settings_limit_default" />

</PreferenceScreen>